# portal-access-control

./: flake.nix
backend/: AUTHENTICATION.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LOGIN_TEMPLATE.md  README.md  docker-compose.yml  spec.md
backend/migrations/: 20251019141908_create_keys_table.down.sql  20251019141908_create_keys_table.up.sql
backend/src/: auth.rs  main.rs
backend/src/controllers/: access.rs
backend/src/database/: helpers.rs
backend/static/css/: style.css
backend/templates/: keys.html.hbs  layout.html.hbs  login.html.hbs  logs.html.hbs
