[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "time", "uuid", "chrono"] }
dotenvy = "0.15.7"
anyhow = "1.0.100"
rocket_cors = "0.6.0"
jsonwebtoken = "9.3"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rocket_dyn_templates = { version = "0.2.0", features = ["handlebars"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
access-control = { git = "https://github.com/afilini/intellim-unlock-doors" }
portal = { git = "https://github.com/PortalTechnologiesInc/lib.git" }
sdk = { git = "https://github.com/PortalTechnologiesInc/lib.git" }